src/App.css
#root {
  max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

#stages {
  margin: 0;
  padding: 0;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
  gap: 10px;
}

.stage_card {
  transition: transform 450ms, border-color 450ms, box-shadow 450ms,
    border-width 450ms, padding 450ms;
}

.stage_card:hover {
  border-color: var(--clr-accent);
  border-radius: 3px;
  border-width: 2.5px;
  box-shadow: 1px 2px 8px 1px var(--clr-accent);
  padding: 1em;
}

.img_card {
  width: 100%;
  aspect-ratio: 4 /3;
  overflow: hidden;
}

.img_card img {
  width: 100%;
  height: 100%;
  object-fit: cover;

  border: 1px solid var(--clr-text);
  border-radius: 3px;
}

.character-dialog {
  background: transparent;
  border: none;
  position: absolute;
  transform: translate(-17%, -10%);
  padding: 0;
  margin: 0;
}

#stage,
#characters {
  position: relative;
}

#sidebar {
  position: fixed;
  left: 0;
  top: 0;
  padding: 0.5rem;
  font-size: 1.25rem;
  background-color: hsl(0 0 3 / 70%);
  z-index: 999;

  display: flex;
  max-height: 4rem;
}

img#characters {
  max-width: 250px;
  object-fit: contain;
}

.frame {
  position: relative;
}

.gameInActive {
  filter: blur(1rem);
}

